syntax = "proto3";

package rolesV1;

option go_package = "services/roles/proto;roles";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message ListRolesRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message ListRolesResponse {
    repeated Role roles = 1;
    int64 total_count = 2;
    int64 limit = 3;
    int64 offset = 4;
}

message GetRoleRequest {
    string uuid = 1;
}

message CreateRoleRequest {
    string title = 1;
}

message UpdateRoleRequest {
    string uuid = 1;
    string title = 2;
}

message DeleteRoleRequest {
    string uuid = 1;
}

message Role {
    uint64 id = 1;
    string uuid = 2;
    string title = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

service RoleService {

    // List Roles
    rpc ListRoles (ListRolesRequest) returns (ListRolesResponse) {
        option (google.api.http) = {
            get: "/v1/roles"
        };
    }
    // Get Role
    rpc GetRole (GetRoleRequest) returns (Role) {
        option (google.api.http) = {
          get: "/v1/roles/{uuid}"
        };
    }

    // Create Role object request
    rpc CreateRole (CreateRoleRequest) returns (Role) {
        option (google.api.http) = {
            post: "/v1/roles"
            body: "*"
        };
    }

    // Update Role object request
    rpc UpdateRole (UpdateRoleRequest) returns (Role) {
        option (google.api.http) = {
            put: "/v1/roles/{uuid}"
            body: "*"
        };
    }

    // Delete Role object request
    rpc DeleteRole (DeleteRoleRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
          delete: "/v1/roles/{uuid}"
        };
    }
}